[package]
name = "nanoserde-derive"
version = "0.1.18"
authors = ["Makepad <info@makepad.nl>", "Fedor <not.fl3@gmail.com>"]
edition = "2018"
description = "Fork of makepad-tinyserde derive without any external dependencies"
license = "MIT"

[lib]
proc-macro = true


[dependencies]

syn = { version="1.0.44" , features = ["full","extra-traits"] } 
quote = "1.0"
proc-macro2 = {version = "1.0"}
structmeta = "0.1.4"